# pyappstoreconnect

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: PyPI.yml  TestPyPI.yml
pyappstoreconnect/: acquisition.py  benchmarks.py  client.py
