[project]
name = "pyappstoreconnect"
version = "0.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Grigory Efimov", email = "grigory.efimov@gmail.com"},
]
maintainers = [
    {name = "Grigory Efimov", email = "grigory.efimov@gmail.com"},
]

[project.dependencies]
requests = "==2.31.0"
urllib3 = "==2.1.0"
python-sirp = ">=1.0.1"

[project.urls]
Homepage = "https://github.com/fb929/pyappstoreconnect"
Documentation = "https://github.com/fb929/pyappstoreconnect"
Repository = "https://github.com/fb929/pyappstoreconnect"
